v1.11.3
- Updated to PVR API v2.1.0

v1.11.2
- Debian packaging: fix library install path
- Miscellaneous backend fixes

v1.11.1
- Updated to PVR API v2.0.0

v1.11.0
- Updated to PVR API v1.9.7

v1.10.7
- Updated language files from Transifex

v1.10.6
- Coverity fixes

v1.10.5
- Updated to use new libplatform-dev

v1.10.4
- Updated to PVR API v1.9.6
- Recordings: set recording thumbnail path if found on the backend (only TSReader)

v1.10.3
- Move tsreader sources into the MPTV namespace to prevent a crash on RPi when using the FileReader class.
  Kodi now has an internal FileReader class (since xbmc/xbmc/pull/6306) which is somehow used by the addon instead of the class in the addon.
- EPG: Use the episode name as plot outline (when available)
- Channel: add support for ATSC Major.Minor channel numbers
- Radio: attempt to fix the short hickup after 1 second when tuning a radio channel

v1.10.2
- Updated to PVR API v1.9.5
- Fixed: Schedules: Fix displaying an incorrect day in Kodi for 'Weekly' and 'WeeklyEveryTimeOnThisChannel' series recordings
- Fixed: Schedules: change the displayed days for 'EveryTimeOnThisChannel' and 'EveryTimeOnEveryChannel' to all days instead of sunday

v1.10.1
- Updated to PVR API v1.9.4
- Updated to GUI API v5.8.0

v1.9.27
- Updated language files from Transifex

v1.9.26
- Updated language files from Transifex
- Minor changes to conform with C++11

v1.9.25
- Updated language files from Transifex

v1.9.24
- added getBackendHostname function

v1.9.23
- Fixed mime-type for MPEG-TS

v1.9.22
- Updated language files from Transifex

v1.9.21
- change library name to Kodi

v1.9.20
- fixed deadlock when activating the addon on some darwin (osx, ios) runtimes

v1.9.19
- Updated language files from Transifex

v1.9.18
- Updated language files from Transifex

v1.9.16
- Updated to API v1.9.2

v1.9.15
- Added: Series recording support (requires skin specific dialog)
- Fixed: [TSReader] Direct playback of recordings that are stored on a network share
